Fix button alignment

--- a/styles.css
+++ b/styles.css
@@ -136,11 +136,14 @@ justify-content: space-between;
     margin: 64px;
     padding: 32px 64px;
     border-radius: 6px;
+    gap: 32px;
+    align-items: center;
 }
 
 .call-to-action .container {
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 button {
